# betweenrows

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Governance Dev Mode with Branch-Based .md  LICENSE  PLAN.md  README.md  SECURITY.md  compose.override.yaml  compose.prod.yaml  compose.quickstart.yaml  compose.yaml  fly.toml  ideas.md  permission_stories.md
.claude/: CLAUDE.md
.claude/agents/: gemini-reviewer.md
.claude/commands/: commit.md  docs-sync.md  release.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: cicd.yml  docs-site-deploy.yml
admin-ui/: CLAUDE.md  DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
admin-ui/src/: App.tsx
docs/: TESTING_PLAN.md  deploy-fly.md  permission-security-tests.md  permission-stories.md  permission-system.md  policy-simplification-plan.md  roadmap.md  security-vectors.md
docs-site/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
docs-site/docs/: index.md
docs-site/internal/: README.md  launch-blockers.md  reconciliation-log.md
migration/: Cargo.toml
migration/src/: lib.rs  m20260219_000001_create_proxy_users.rs  m20260220_000002_create_data_sources.rs  m20260220_000003_create_user_data_sources.rs  m20260221_000004_create_catalog_tables.rs  m20260301_000005_add_column_is_selected.rs  m20260303_000006_add_schema_alias.rs  m20260306_000007_add_access_mode_to_data_source.rs  m20260307_000008_create_policy.rs  m20260307_000009_create_policy_version.rs  m20260307_000010_create_policy_obligation.rs  m20260307_000011_create_policy_assignment.rs  m20260307_000012_create_query_audit_log.rs  m20260307_000013_idx_policy_version.rs  m20260307_000014_idx_query_audit_log_user_id.rs  m20260307_000015_idx_query_audit_log_data_source_id.rs  m20260307_000016_idx_query_audit_log_created_at.rs  m20260315_000017_add_status_to_query_audit_log.rs  m20260315_000018_add_error_message_to_query_audit_log.rs  m20260316_000019_drop_policy_obligation.rs  m20260316_000020_drop_policy_tables.rs  m20260316_000021_create_policy_v2.rs  m20260316_000022_create_policy_version_v2.rs  m20260316_000023_create_policy_assignment_v2.rs  m20260320_000024_create_role.rs  m20260320_000025_create_role_member.rs  m20260320_000026_idx_role_member_unique.rs  m20260320_000027_create_role_inheritance.rs  (+29 more)
proxy/: .env.example  CLAUDE.md  Cargo.toml  README.md  build.rs
proxy/src/: arrow_conversion.rs  auth.rs  crypto.rs  handler.rs  lib.rs  main.rs  policy_match.rs  role_resolver.rs  server.rs  sql_rewrite.rs
proxy/src/admin/: admin_audit.rs  attribute_definition_handlers.rs  audit_handlers.rs  auth_handlers.rs  catalog_handlers.rs  datasource_handlers.rs  datasource_types.rs  decision_function_handlers.rs  discovery_job.rs  dto.rs  jwt.rs  mod.rs  policy_handlers.rs  relationship_handlers.rs  role_handlers.rs  user_handlers.rs
proxy/src/decision/: context.rs  mod.rs  wasm.rs
proxy/src/discovery/: mod.rs  postgres.rs
proxy/src/engine/: mod.rs  rewrite.rs
proxy/src/entity/: admin_audit_log.rs  attribute_definition.rs  column_anchor.rs  data_source.rs  data_source_access.rs  decision_function.rs  discovered_column.rs  discovered_schema.rs  discovered_table.rs  mod.rs  policy.rs  policy_assignment.rs  policy_obligation.rs  policy_version.rs  proxy_user.rs  query_audit_log.rs  role.rs  role_inheritance.rs  role_member.rs  table_relationship.rs  user_data_source.rs
proxy/src/hooks/: mod.rs  policy.rs  read_only.rs  rls.rs
proxy/src/resolution/: graph.rs  mod.rs
proxy/tests/: integration.rs  policy_enforcement.rs  protocol.rs
proxy/tests/support/: mod.rs
(+178 files in other folders)
